tests/reject/close_handle_nonvar.ty
# close(h) frees a handle VARIABLE; a call result (a temp) has no owning scope to
# suppress, so both compilers reject it. (Owned handle vars are the only handles.)
handle H:
    free: hclose

extern "x" fn hopen(id: int) -> H
extern "x" fn hclose(h: H) -> int

fn main():
    close(hopen(1))
